feat: integrate PWA with Vite

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 			rel="stylesheet"
 		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Vite + React + TS</title>
+		<meta name="description" content="Find the best hotels in Tehran!" />
+		<meta name="author" content="Sajjad Bayat" />
+		<title>Alibaba Challenge</title>
 	</head>
 	<body>
 		<div id="root" class="base-font"></div>
