--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<title>Alibaba Challenge</title>
 	</head>
 	<body>
-		<div id="root" class="base-font"></div>
+		<div id="root" class="base-font"><!--ssr-outlet--></div>
 		<script type="module" src="/src/main.tsx"></script>
 	</body>
 </html>
