--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <link rel="manifest" href="/manifest.json" />
     <link rel="preload" href="https://fonts.googleapis.com" />
     <link rel="preload" href="https://fonts.gstatic.com" crossorigin />
